update 01.18.11b : demo sử lý lỗi autobid